# Jelkob

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: docker.yml  python.yml
editor/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
editor/locale/sl/LC_MESSAGES/: django.mo  django.po
editor/migrations/: 0001_initial.py  0002_rename_time_project_created.py  0003_submission_alter_project_description_and_more.py
frontend/: sitemaps.py  urls.py  views.py
frontend/locale/sl/LC_MESSAGES/: django.mo  django.po
frontend/static/frontend/: site.webmanifest
frontend/static/frontend/data/: positions.js
frontend/static/frontend/scripts/: bootstrap.js  carousels.js  colors.js  interaction.js  interactive-simulation.js  patterns.js  simulation.js
frontend/static/frontend/styles/: about.css  bootstrap.css  image-block.css  interaction.css  patterns.css  simulations.css
frontend/templates/frontend/: about.html  base.html  contact.html  interaction.html  login.html  logout.html  patterns.html
frontend/templatetags/: banner.py
jelkob/: asgi.py  settings.py  urls.py  views.py  wsgi.py
patterns/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
patterns/locale/sl/LC_MESSAGES/: django.mo  django.po
patterns/migrations/: 0001_initial.py  0002_rename_container_historicalpattern_image_and_more.py  0002_state.py
runner/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
runner/locale/sl/LC_MESSAGES/: django.mo  django.po
runner/migrations/: 0001_initial.py  0002_historicalpattern_source_and_more.py  0003_alter_historicalpattern_author_and_more.py  0004_pattern_runner_patt_identif_bd8375_idx.py  0005_historicalpattern_visible_pattern_visible.py  0006_config.py  0007_alter_pattern_options.py  0008_rename_duration_config_default_duration_and_more.py
