[tool.poetry]
name = "jelkob"
description = "Main website for accessing and managing Jelka FMF"
license = "GPL-3.0-or-later"
version = "0.0.0"

homepage = "https://github.com/Jelka-FMF/Jelkob"
repository = "https://github.com/Jelka-FMF/Jelkob"
authors = ["Programerski klub FMF"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

daphne = "^4.2.1"
django = "^5.2.8"
djangorestframework = "^3.16.1"
django-solo = "^2.4.0"
django-filter = "^25.2"
django-simple-history = "^3.10.1"
django-templates-macros = "^0.3"
django-cors-headers = "^4.9.0"
django-eventstream = {extras = ["drf"], version = "^5.3.1"}
python-dotenv = "^1.2.1"
httpx = "^0.28.1"

psycopg = {version = "^3.2.12", optional = true, extras = ["binary"]}
mysqlclient = {version = "^2.2.7", optional = true}
oracledb = {version = "^3.4.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[tool.poetry.extras]
postgres = ["psycopg"]
mysql = ["mysqlclient"]
oracle = ["oracledb"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "DJ", "B", "G", "RUF"]
ignore = ["E203", "E501", "RUF012"]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
